
Mon Jul 17 15:11:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_server.c - Add NULL stash file argument to krb5_db_fetch_mkey().


Fri Jul 7 16:03:56 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling and LDFLAGS.
	* configure.in - Add USE_<mumble> and KRB5_LIBRARIES.


Fri Jun 30 14:37:32 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add --with-dbm to select between Berkeley and DBM
		KDC database format.


Tue Jun 27 16:10:19 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_parse.c - Give compiler something to compile if SANDIA is not
		defined.  Some compilers choke when nothing to compile.
	* adm_process.c - Cast 4th argument of setsockopt(2) to be const char *


Thu Jun 22 11:54:31 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_server.c - Change KDB_CONVERT_KEY_OUTOF_DB to decrypt_key call.


Thu Jun 15 17:51:04 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
		Also, remove DBMLIB, it was not used.
	* configure.in - Remove dbm library checks, these are no longer needed
		with the Berkeley database code.  Also, add shared library
		usage check.

Sat Jun 10 23:02:30 1995  Tom Yu  (tlyu@dragons-lair)

	* adm_adm_func.c, adm_extern.h, adm_funcs.c, adm_kadmin.c,
	  adm_kpasswd.c, adm_nego.c, adm_process.c: krb5_auth_context
		redefinitions

Fri Jun  9 19:06:45 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed May 24 07:22:10 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* adm_network.c (setup_network): Cast sockaddr_in * to sockaddr *
		in call to bind.

Mon May 22 09:57:08 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in	- Install kadmind as kadmind_old.  Manpage too.

Wed May 03 03:30:51 1995  Chris Provenzano (proven@mit.edu)

        * adm_process.c: (krb5_recvauth()): No longer needs the rc_type arg.
