@@ -276,6 +276,7 @@ init_db(context, dbname, masterkeyname, masterkeyblock)
     krb5_boolean more;
     int number_of_entries;
     char tgs_name[255];
+    krb5_keysalt	salt;
 
     /* set db name if appropriate */
     if (dbname && (retval = krb5_db_set_name(context, dbname)))
@@ -357,8 +358,9 @@ init_db(context, dbname, masterkeyname, masterkeyblock)
 	convert server.key into a real key 
 	(it may be encrypted in the database) 
  */
-    if (retval = krb5_kdb_decrypt_key(context,&master_encblock,
-				      &server_entry.key,&tgs_key)) {
+    if (retval = krb5_dbekd_decrypt_key_data(context,&master_encblock,
+				      &server_entry.key_data[0],&tgs_key,
+				      &salt)) {
 	krb5_db_free_principal(context, &server_entry, number_of_entries);
 	(void) krb5_finish_key(context, &master_encblock);
 	memset((char *)&master_encblock, 0, sizeof(master_encblock));
@@ -366,7 +368,7 @@ init_db(context, dbname, masterkeyname, masterkeyblock)
 	return(retval);
     }
 
-    tgs_kvno = server_entry.kvno;
+    tgs_kvno = server_entry.key_data[0].key_data_kvno;
     krb5_db_free_principal(context, &server_entry, number_of_entries);
     return(0);
 }
